compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__construct__typech_construct_empty_struct.snap
---
source: compiler/lume_typech/src/tests/check/construct.rs
description: "struct A { }\n\n        fn foo() {\n            let a = A { };\n        }"
---

