compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__construct__typech_construct_struct_prop_single.snap
---
source: compiler/lume_typech/src/tests/check/construct.rs
description: "struct A {\n            foo: Boolean;\n        }\n\n        fn foo() {\n            let a = A { foo: false };\n        }"
---

