compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__construct__typech_construct_struct_type_incomp.snap
---
source: compiler/lume_typech/src/tests/check/construct.rs
description: "struct A {\n            foo: Boolean;\n        }\n\n        fn foo() {\n            let a = A { foo: 0 };\n        }"
---
× error[LM4001]: mismatched types
   ╭───────────
 5 │         fn foo() {
 6 │             let a = A { foo: 0 };
   │                              ^ expected type Boolean, but found type Int32...
 7 │         }
   ∶ 
 1 │ struct A {
 2 │             foo: Boolean;
   │                  ^^^^^^^ ...because of type defined here
 3 │         }
   ╰──
   help: expected type Boolean
            found type Int32
